--- a/Mix/trunk/.cproject
+++ b/Mix/trunk/.cproject
@@ -83,6 +83,19 @@
 </extension>
 </extensions>
 </storageModule>
+<storageModule moduleId="org.eclipse.cdt.core.language.mapping"/>
+<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets">
+<buildTargets>
+<target name="all" path="nagios_plugin" targetID="org.eclipse.cdt.make.MakeTargetBuilder">
+<buildCommand>nmake</buildCommand>
+<buildArguments>/f Makefile.old</buildArguments>
+<buildTarget>all</buildTarget>
+<stopOnError>false</stopOnError>
+<useDefaultCommand>true</useDefaultCommand>
+</target>
+</buildTargets>
+</storageModule>
+<storageModule moduleId="org.eclipse.cdt.core.externalSettings"/>
 </cconfiguration>
 </storageModule>
 </cproject>
