--- a/config.h.in
+++ b/config.h.in
@@ -40,6 +40,12 @@
 /* Define to 1 if you have the <memory.h> header file. */
 #undef HAVE_MEMORY_H
 
+/* Define to 1 if you have the <mysql.h> header file. */
+#undef HAVE_MYSQL_H
+
+/* Define to 1 if you have the <mysql/mysql.h> header file. */
+#undef HAVE_MYSQL_MYSQL_H
+
 /* Define if you have OpenSSL (which is needed!) */
 #undef HAVE_OPENSSL
 
