--- a/configure.in
+++ b/configure.in
@@ -518,26 +518,6 @@ if test -z "$found_xmllib"; then
 	AC_MSG_ERROR([Xerces-C libs NOT found - please use --with-xml-lib])
 fi
 
-AC_MSG_CHECKING([if libxerces-depdom is needed])
-AC_LINK_IFELSE([AC_LANG_PROGRAM([
-#include "util/XercesDefs.hpp"
-#include "util/PlatformUtils.hpp"
-#if (XERCES_VERSION_MAJOR >1)
-    #include <dom/deprecated/DOM.hpp>
-    #include <dom/deprecated/DOMParser.hpp>
-#else
-    #include <dom/DOM.hpp>
-    #include <parsers/DOMParser.hpp>
-#endif
-#if (_XERCES_VERSION >= 20200)
-    XERCES_CPP_NAMESPACE_USE
-#endif
-], [XMLPlatformUtils::Initialize();		DOM_Document doc=DOM_Document::createDocument();
-
-])],[AC_MSG_RESULT(No)],[AC_MSG_RESULT(Yes)
-LIBS="$LIBS -lxerces-depdom"
-])
-
 
 AC_LANG_POP(C++)
 
@@ -616,7 +596,13 @@ if test "x$DIALOG" != "x" ; then
 				], [mysql_init(0);
 				])],[AC_MSG_RESULT(libmysql found)],
 				[AC_MSG_RESULT(libmysql NOT found)])
-
+    AC_CHECK_DECL([MYSQL_OPT_RECONNECT], [AC_DEFINE(HAVE_MYSQL_OPT_RECONNECT,,[Define if you mysql client library supports the MYSQL_RECONNECT option])]   ,[],[[
+    				#ifdef HAVE_MYSQL_MYSQL_H
+				#include <mysql/mysql.h>
+				#elif defined(HAVE_MYSQL_H)
+				#include <mysql.h>
+				#endif
+				]])
 LIBS="$saved_LIBS"
 fi
 
