--- a/config.h.in
+++ b/config.h.in
@@ -22,6 +22,9 @@
    */
 #undef HAVE_FIONREAD
 
+/* Define to 1 if you have the `fstat64' function. */
+#undef HAVE_FSTAT64
+
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
 
