--- a/configure.in
+++ b/configure.in
@@ -199,19 +199,6 @@ AC_ARG_ENABLE(server_monitoring,
 	]
 )
 
-
-dnl performance server ??
-PERFORMANCE_SERVER=""
-AC_ARG_ENABLE(performance_server,
-	AS_HELP_STRING([--enable-performance-server],
-			[Specify if to build with the server-side of the perfomance manager]),
-	[
-		if test "x$enableval" != "xno" ; then
-		    PERFORMANCE_SERVER="-DPERFORMANCE_SERVER"
-		fi
-	]
-)
-
 dnl replay detection ??
 REPLAY_DETECTION=""
 AC_ARG_ENABLE(replay_detection,
@@ -668,8 +655,8 @@ if test "x$DOTHETEST" != "xyes" ; then
     AC_SUBST(LIBCPPUNIT,cppunit)
 fi
 
-CFLAGS="$CFLAGS $POOL $DYNAMIC $DIALOG $BANDWIDTH_LIMIT $BANDWIDTH_LIMIT_THROUGHPUT $PAYMENT $SERVER_MONITORING $PERFORMANCE_SERVER $REPLAY_DETECTION $NEW_MIX_TYPE $CRIME $OFLAGS"
-CXXFLAGS="$CXXFLAGS $POOL $DYNAMIC $DIALOG $BANDWIDTH_LIMIT $BANDWIDTH_LIMIT_THROUGHPUT $PAYMENT $SERVER_MONITORING $PERFORMANCE_SERVER $REPLAY_DETECTION $NEW_MIX_TYPE $CRIME $OFLAGS"
+CFLAGS="$CFLAGS $POOL $DYNAMIC $DIALOG $BANDWIDTH_LIMIT $BANDWIDTH_LIMIT_THROUGHPUT $PAYMENT $SERVER_MONITORING $REPLAY_DETECTION $NEW_MIX_TYPE $CRIME $OFLAGS"
+CXXFLAGS="$CXXFLAGS $POOL $DYNAMIC $DIALOG $BANDWIDTH_LIMIT $BANDWIDTH_LIMIT_THROUGHPUT $PAYMENT $SERVER_MONITORING $REPLAY_DETECTION $NEW_MIX_TYPE $CRIME $OFLAGS"
 LIBS="$LIBS $PAYMENT_LIB $MYSQL_LIB"
 
 AM_CONDITIONAL([DOTESTS], [test x$DOTHETESTS = xyes])
