--- a/configure.in
+++ b/configure.in
@@ -651,6 +651,18 @@ AC_ARG_ENABLE(tests,
 	    fi	
 	]
 )
+
+AC_ARG_ENABLE(manioq,
+	AS_HELP_STRING([--enable-manioq],[Switch for Manioq provider mixes]),
+	[
+	    if test "x$enableval" != "xno" ; then
+		PAYMENT=""
+		CFLAGS="$CFLAGS -DMANIOQ"
+		CXXFLAGS="$CXXFLAGS -DMANIOQ"
+	    fi
+	]
+)
+
 if test "x$DOTHETEST" != "xyes" ; then
     AC_SUBST(LIBCPPUNIT,cppunit)
 fi
