--- a/Makefile.in
+++ b/Makefile.in
@@ -82,9 +82,9 @@ am_libproxytest_a_OBJECTS = CAAbstractControlChannel.$(OBJEXT) \
 	CALocalProxy.$(OBJEXT) CALogPacketStats.$(OBJEXT) \
 	CAMiddleMix.$(OBJEXT) CAMiddleMixChannelList.$(OBJEXT) \
 	CAMix.$(OBJEXT) CAMixWithReplayDB.$(OBJEXT) CAMsg.$(OBJEXT) \
-	CAMutex.$(OBJEXT) CAMuxSocket.$(OBJEXT) CAPriceInfo.$(OBJEXT) \
-	CAPool.$(OBJEXT) CAQueue.$(OBJEXT) \
-	CAReplayControlChannel.$(OBJEXT) \
+	CAMultiSignature.$(OBJEXT) CAMutex.$(OBJEXT) \
+	CAMuxSocket.$(OBJEXT) CAPriceInfo.$(OBJEXT) CAPool.$(OBJEXT) \
+	CAQueue.$(OBJEXT) CAReplayControlChannel.$(OBJEXT) \
 	CAReplayCtrlChannelMsgProc.$(OBJEXT) CASemaphore.$(OBJEXT) \
 	CASignature.$(OBJEXT) CASingleSocketGroup.$(OBJEXT) \
 	CASocket.$(OBJEXT) CASocketAddrINet.$(OBJEXT) \
@@ -284,6 +284,7 @@ libproxytest_a_SOURCES = CAAbstractControlChannel.cpp\
 		    CAMix.cpp \
 		    CAMixWithReplayDB.cpp\
 		    CAMsg.cpp \
+		    CAMultiSignature.cpp\
 		    CAMutex.cpp\
 		    CAMuxSocket.cpp \
 		    CAPriceInfo.cpp \
@@ -464,6 +465,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/CAMix.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/CAMixWithReplayDB.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/CAMsg.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/CAMultiSignature.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/CAMutex.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/CAMuxSocket.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/CAPool.Po@am__quote@
@@ -939,6 +941,7 @@ uninstall-am: uninstall-sbinPROGRAMS
 		    CAMix.hpp \
 		    CAMixWithReplayDB.hpp\
 		    CAMsg.hpp \
+		    CAMultiSignature.hpp\
 		    CAMutex.hpp\
 		    CAMuxSocket.hpp \
 		    CAPriceInfo.hpp \
